# newsletter-api

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/handlers/: health_check.rs  mod.rs  suscribe.rs
tests/: health_check.rs  suscribe.rs
